tdf#149996 DOCX export: fix hyperlinks in nested paragraphs

Close all hyperlinks in the paragraph where they start.

Regression from commit 20a3792502120d67b1a9fdea641e15ea504359d3
"fdo#76316 : File gets corrupt after Roundtrip".

Change-Id: Ied5be90601f5a494f927d43aa6ff7efd3545f993
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148353
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>