sw/source/filter/ww8/docxattributeoutput.hxx
@@ -928,7 +928,7 @@ private:
     bool m_closeHyperlinkInPreviousRun;
     bool m_startedHyperlink;
     // Count nested HyperLinks
-    sal_Int32 m_nHyperLinkCount;
+    std::stack<sal_Int32> m_nHyperLinkCount;
     sal_Int16 m_nFieldsInHyperlink;
 
     // If the exported numbering rule defines the outlines
